src/objects/Details__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>